static/css/style.css
/* we're currently modifying bootstrap.css to apply 'table' and 'table-striped' styles to all tables */

.content {
    padding-bottom: 100px;
}

.label-GET {
  background-color: #3a87ad;
}

.label-POST {
  background-color: #468847;
}

.label-PUT {
  background-color: #f89406;
}

.label-DELETE {
  background-color: #b94a48;
}

.label-GET, .label-POST, .label-PUT, .label-DELETE {
    color: #fff;
    padding: 1px 2px;
}

body a {
    color: #0088cc;
    text-decoration: none;
}

body a:hover {
    color: #005580;
    text-decoration: underline;
}

body a:visited {
    color: #0088cc;
    text-decoration: none;
}

code {
    font-size: 12px;
    white-space: nowrap;
    /* color: #4a484c; */
}

pre {
    background-color: #ececec;
}

.alert, pre {
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    border: 0;
}

.alert-success {
    background-color: #f8fcf6;
    color: #468847;
}

.alert-error {
    background-color: #faecec;
    color: #b94a48;
}

.alert-info {
    background-color: #eaf8ff;
    color: #3a87ad;
}

body {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    line-height: 18px;
}

body h1, body h2, body h3 {
    line-height: 40px;
}

body h1 {
    font-size: 36px;
}

body h2 {
    font-size: 26px;
}

body h3 {
    font-size: 22px;
}

body h4 {
    font-size: 20px;
}

body h2, body h3, body h4, body h5 {
    color: #4a484c;
    margin-top: 2em;
    margin-bottom: .5em;
}

ul {
    list-style-type: square;
}

blockquote {
    font-style: italic;
    margin-left: 50px;
    line-height: 20px;
}

blockquote p {
    font-size: 14px;
    line-height: 20px;
}

table {
    border: 1px solid #ddd;
}

table td, .table th {
    border-right: 1px solid #ddd;
}

code {
    border: none;
    background-color: transparent;
}

#markdown-toc {
    color: #ddd;
    margin: 0 0 30px 0;
    padding: 0 0 0 25px;
    font-size: 16px;
    line-height: normal;
    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

#markdown-toc li {
    padding: 2px;
}

ul.nav-list ul.nav-list ul.nav-list li a {
    padding-left: 50px;
}

p, div.layout-like-p {
    line-height: 20px;
    font-size: 14px;
}

ul.nav-list ul.nav-list ul.nav-list li a {
    padding-left: 50px;
}

.new-nav .nav.header,
.nav.header {
    margin-bottom: 0;
    border-bottom: none;
}

.subnav-container {
    border-bottom: 1px solid #dddddd;
    margin-bottom: 30px;
}

ul.nav-list {
    padding: 0 0 5px 0;
}

ul.nav-list li a {
    font-size: 12px;
    padding-top: 2px;
    padding-bottom: 2px;
}

html.breakpoint-phone .nav.header, html.breakpoint-tablet .nav.header {
    min-width: 100%;
    margin-bottom: 0;
}

 html.breakpoint-tablet .sidebar {
    margin: 0 5%;
 }

html.breakpoint-tablet ul.nav-list ul.nav-list {
    border-right: 0;
}

html.breakpoint-phone .subnav-container .breadcrumb .ordering {
    position: static;
    width: auto;
    top: 0;
}

html.breakpoint-phone .container {
    padding: 0 5px;
}

html.breakpoint-tablet .nav-list {
    margin-right: 0;
    width: auto;
}

pre code {
    margin-left: 20px;
    white-space: pre-wrap;
}

pre code, pre {background-color:#073642;color:#93a1a1;}
pre code  .c{color:#586e75 !important;font-style:italic !important}
pre code  .cm{color:#586e75 !important;font-style:italic !important}
pre code  .cp{color:#586e75 !important;font-style:italic !important}
pre code  .c1{color:#586e75 !important;font-style:italic !important}
pre code  .cs{color:#586e75 !important;font-weight:bold !important;font-style:italic !important}
pre code  .err{color:#dc322f !important;background:none !important}
pre code  .k{color:#cb4b16 !important}
pre code  .o{color:#93a1a1 !important;font-weight:bold !important}
pre code  .p{color:#93a1a1 !important}
pre code  .ow{color:#2aa198 !important;font-weight:bold !important}
pre code  .gd{color:#93a1a1 !important;background-color:#372c34 !important;display:inline-block}
pre code  .gd .x{color:#93a1a1 !important;background-color:#4d2d33 !important;display:inline-block}
pre code  .ge{color:#93a1a1 !important;font-style:italic !important}
pre code  .gr{color:#aa0000}
pre code  .gh{color:#586e75 !important}
pre code  .gi{color:#93a1a1 !important;background-color:#1a412b !important;display:inline-block}
pre code  .gi .x{color:#93a1a1 !important;background-color:#355720 !important;display:inline-block}
pre code  .go{color:#888888}
pre code  .gp{color:#555555}
pre code  .gs{color:#93a1a1 !important;font-weight:bold !important}
pre code  .gu{color:#6c71c4 !important}
pre code  .gt{color:#aa0000}
pre code  .kc{color:#859900 !important;font-weight:bold !important}
pre code  .kd{color:#268bd2 !important}
pre code  .kp{color:#cb4b16 !important;font-weight:bold !important}
pre code  .kr{color:#d33682 !important;font-weight:bold !important}
pre code  .kt{color:#2aa198 !important}
pre code  .n{color:#268bd2 !important}
pre code  .na{color:#268bd2 !important}
pre code  .nb{color:#859900 !important}
pre code  .nc{color:#d33682 !important}
pre code  .no{color:#b58900 !important}
pre code  .ni{color:#800080}
pre code  .nl{color:#859900 !important}
pre code  .ne{color:#268bd2 !important;font-weight:bold !important}
pre code  .nf{color:#268bd2 !important;font-weight:bold !important}
pre code  .nn{color:#b58900 !important}
pre code  .nt{color:#268bd2 !important;font-weight:bold !important}
pre code  .nx{color:#b58900 !important}
pre code  .bp{color:#999999}
pre code  .vc{color:#008080}
pre code  .vg{color:#268bd2 !important}
pre code  .vi{color:#268bd2 !important}
pre code  .nv{color:#268bd2 !important}
pre code  .w{color:#bbbbbb}
pre code  .mf{color:#2aa198 !important}
pre code  .m{color:#2aa198 !important}
pre code  .mh{color:#2aa198 !important}
pre code  .mi{color:#2aa198 !important}
pre code  .mo{color:#009999}
pre code  .s{color:#2aa198 !important}
pre code  .sb{color:#d14}
pre code  .sc{color:#d14}
pre code  .sd{color:#2aa198 !important}
pre code  .s2{color:#2aa198 !important}
pre code  .se{color:#dc322f !important}
pre code  .sh{color:#d14}
pre code  .si{color:#268bd2 !important}
pre code  .sx{color:#d14}
pre code  .sr{color:#2aa198 !important}
pre code  .s1{color:#2aa198 !important}
pre code  .ss{color:#990073}
pre code  .il{color:#009999}
pre code  div .gd,.highlight div .gd .x,.highlight div .gi,.highlight div .gi .x{display:inline-block;width:100%}

p code {
    word-break: keep-all;
    white-space: normal;
}

img {
    max-width: 90%;
    margin: 25px auto 50px auto;
    display: block;
    padding: 5px;
    background-color: #aaa;
}

.promo-block-wrapper {
    margin-top: 30px;
    margin-bottom: 30px;
    border-top: 1px solid #eee;
    border-bottom: 1px solid #eee;
}

.promo-block {
    position: relative;
}

.promo-block h3 {
    margin-top: 20px;
    margin-bottom: 15px;
    font-size: 18px;
}

.promo-block h3 hr {
    margin-bottom: 0;
}

.promo-block-inner {
    padding: 20px;
    -webkit-transition: all 0.2s ease-out;
    -moz-transition: all 0.2s ease-out;
    -o-transition: all 0.2s ease-out;
    transition: all 0.2s ease-out;
}

.promo-block-inner:hover {
    background-color: #ededed;
}

.promo-block .overlay {
    position: absolute;
    display: block;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.promo-block-image {
    width: 58px;
    height: 58px;
    margin: 0 auto 20px auto;
    background-size: 58px 58px;
    background-image: url(/assets/images/docs-broadcast.png);
}

html.breakpoint-retina .promo-block-image {
    background-image: url(/assets/images/docs-broadcast@2x.png);
}

.promo-block-image.authentication {
    background-image: url(/assets/images/docs-authentication.png);
}

html.breakpoint-retina .promo-block-image.authentication {
    background-image: url(/assets/images/docs-authentication@2x.png);
}

.search-bar-container {
  display: none !important;
}

.container {
    width:1152px;
    margin-right:auto;
    margin-left:auto;
    *zoom:1
}

